--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@ body {
     text-align: center;
     padding: 50px;
     background-color: black;
-    color: gold;
+    color:#FFDA66;
     font-family: "Karla", sans-serif;
     font-size: large;
 }
@@ -17,7 +17,21 @@ header {
 .welcome {
     padding: 50px;
     width: 50%;
+
+}
+
+button {
     
+  background-color: transparent;
+  border: 4px solid #FFDA66;
+  color: #FFDA66;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 6px 10px;
+  cursor: pointer;
 }
 
 /* Moving Stars Background */
