--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,8 @@ body {
     background-color: black;
     color:#FFDA66;
     font-family: "Karla", sans-serif;
-    font-size: large;
+    font-size: 1.0rem;
+    display: flex;
 }
 
 header {
@@ -20,14 +21,47 @@ header {
 
 }
 
+.level {
+    padding: 20px 40px;
+    display: inline;
+    border: none;
+
+}
+
+a {
+    font-size: 1.0rem;
+  color:#FFDA66;
+  -moz-transition: all 0.2s ease-in;
+  -o-transition: all 0.2s ease-in;
+  -webkit-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
+}
+
+a:link {
+  text-decoration: none;
+}
+
+a:visited {
+  text-decoration: none;
+  color: #f5db16;
+}
+
+a:hover {
+  color: #fdec6e;
+  text-shadow:0px 0px 30px #fdec6e;
+  -moz-transition: all 0.2s ease-in;
+  -o-transition: all 0.2s ease-in;
+  -webkit-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
+}
+
 button {
     
   background-color: transparent;
-  border: 4px solid #FFDA66;
+  border: 2px solid #FFDA66;
   color: #FFDA66;
   padding: 15px 32px;
   text-align: center;
-  text-decoration: none;
   display: inline-block;
   font-size: 16px;
   margin: 6px 10px;
@@ -65,20 +99,14 @@ button {
   transform-style: preserve-3d;
 }
 
-.card-image {
-    max-width: 100%;
-    max-height: 100%;
-    border-radius: 20px;
-    backface-visibility: hidden;
-}
 
 .card-front, .card-back {
   position: absolute;
   width: 100%;
   height: 100%;
+  border-radius: 20px;
   -webkit-backface-visibility: hidden; /* Safari */
   backface-visibility: hidden;
-
 }
 
 .card:hover {
@@ -86,12 +114,12 @@ button {
     cursor: pointer;
 }
 
-.card-front {
+.card.flip {
     transform: rotateY(180deg);
 }
 
-.card-back {
-    transform: rotateY(0);   
+.card-front {
+  transform: rotateY(180deg);
 }
 
 
