--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,34 @@ header {
     padding: 30px;
 }
 
+.overlay {
+  position: fixed; /* Sit on top of the page content */
+  /*display: none;/* Hidden by default */
+  width: 100%; /* Full width (cover the whole page) */
+  height: 100%; /* Full height (cover the whole page) */
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0,0,0,0.8); /* Black background with opacity */
+  z-index: 1; /* Specify a stack order in case you're using a different order for other elements */
+  cursor: pointer; /* Add a pointer on hover */
+}
+
+.overlay-text{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  font-size: 50px;
+  transform: translate(-50%,-50%);
+  -ms-transform: translate(-50%,-50%);
+}
+
+.show{
+    visibility: visible !important;
+    opacity: 1 !important;
+}
+
 .welcome {
     width: 40%;
     float: left;
@@ -26,6 +54,7 @@ header {
     display: inline;
     border: none;
     font-size: 25px;
+    outline-width: 0px;
 
 }
 
@@ -36,10 +65,14 @@ button {
   color: #FFDA66;
   padding: 15px 32px;
   text-align: center;
-  display: inline-block;
+  display: inline;
   font-size: 30px;
   cursor: pointer;
-  outline: none;
+  outline: 0px solid #da8301!important;
+}
+
+#restart-button {
+    font-size: 20px;
 }
 
 .active, .difficulty-button:hover {
@@ -49,7 +82,7 @@ button {
     font-weight: bolder;
 }
 
-.game-container {
+#game-container {
     display: grid;
     grid-template-columns: repeat(4,auto);
     grid-gap: 10px;
@@ -65,6 +98,7 @@ button {
     grid-column: 1/-1;
     display: flex;
     justify-content: space-between;
+    margin-right: 20px;
 
 }
 .card {
