--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,6 +57,10 @@ header {
     opacity: 1 !important;
 }
 
+.content {
+    padding: 0px 20px;
+}
+
 .welcome {
     width: 40%;
     float: left;
@@ -159,7 +163,7 @@ button {
     }
 
     #game-container {
-        width: 60%;
+        width: 70%;
     }
 
 }
