--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ header {
 
 #game-completed-overlay {
   position: fixed; /* Sit on top of the page content */
-  display: none;/* Hidden by default */
+  /*display: none;/* Hidden by default */
   width: 100%; /* Full width (cover the whole page) */
   height: 100%; /* Full height (cover the whole page) */
   top: 0;
@@ -41,6 +41,10 @@ header {
 
 .results {
     font-size: 20px;
+}
+
+.total-score-message {
+    font-size: 38px;
 }
 
 .time-bonus-text {
