--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,18 +132,6 @@ button {
     padding-top: 10px;
 }
 
-/*.game-container-easy {
-    display: grid;
-    grid-template-columns: repeat(3,auto);
-    grid-gap: 10px;
-    width: 30%;
-    text-align: center;
-    position: inherit;
-    margin: 0 auto;
-    perspective: 500px;
-    padding-top: 10px;
-}*/
-
 .game-info-container {
     grid-column: 1/-1;
     display: flex;
@@ -299,6 +287,7 @@ https://mkrtchyan.ga
 }
 
 .stars, .twinkling, .clouds {
+    position: absolute;
   top:0;
   left:0;
   right:0;
