--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -279,11 +279,11 @@
      display:block;
 }
  .stars {
-     background:#000 url(http://www.script-tutorials.com/demos/360/images/stars.png) repeat top center;
+     background:#000 url(../images/background/stars-background.png) repeat top center;
      z-index:0;
 }
  .twinkling{
-     background:transparent url(http://www.script-tutorials.com/demos/360/images/twinkling.png) repeat top center;
+     background:transparent url(../images/background/twinkling-background.png) repeat top center;
      z-index:1;
      -moz-animation:move-twink-back 200s linear infinite;
      -ms-animation:move-twink-back 200s linear infinite;
@@ -292,7 +292,7 @@
      animation:move-twink-back 200s linear infinite;
 }
  .clouds{
-     background:transparent url(http://www.script-tutorials.com/demos/360/images/clouds3.png) repeat top center;
+     background:transparent url(../images/background/clouds-background.png) repeat top center;
      z-index:3;
      -moz-animation:move-clouds-back 200s linear infinite;
      -ms-animation:move-clouds-back 200s linear infinite;
