--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,6 +142,7 @@
      -webkit-backface-visibility: hidden;
     /* Safari */
      backface-visibility: hidden;
+     transform: rotateX(0deg)
 }
  .card:hover {
      box-shadow: 0px 0px 20px 1px rgb(255, 196, 21);
