--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,10 @@
      font-family: "Karla", sans-serif;
      font-size: 1.2rem;
 }
+
+p {
+    margin-bottom: 5px;
+}
  header {
      padding: 20px 20px;
 }
